# Chubao-Browser-manager-

./: .env.example  .gitignore  CLAUDE.md  GitHub发布指南.md  README.md  dev.ps1  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.ts  vitest.config.ts  下一步开发计划.md  项目架构规范.md
src-tauri/: Cargo.toml  browser-manager.db  tauri.conf.json
src-tauri/.sqlx/: query-0785f7c508e3150924c87633f53398a882e2e9d5dc60d07e1b6ecca7803455ef.json  query-1cadb746ae0ec5f013acc85426767eccd32b6e4f0f698c130b9ac12ffea4788d.json  query-255c3b5078d5329b2a6eb5217f5aa2f8522b442b8d709bb1c2d3df957394ee02.json  query-304058d0bafb505a44a0a7ad713d1ac0e5036a99a4028fbcfa634534bcfc9a0b.json  query-62b44cf32d9fa0aa9c411cfe50b74721a605c19de1fbc592db1dd00231b8b4bf.json  query-6d03e81158e83e6aebda00b334f4b0541094249ff960f8e1b481ed2892ba8800.json  query-92f4a99100853748aa5e8ba88af6b15228d8dab0ae8447c78897b3896a9a36b8.json  query-d54761e66a31bb3445e2fb64cc96f0b0338958da786eb5a0e61c9d7dbe41acd2.json  query-d5aa776186019d16a742b02aa6a3dc86c321139e4077e8ce8dd644ad0ad2312a.json
src-tauri/capabilities/: default.json
src-tauri/data/templates/: device_templates.json
src-tauri/migrations/: 001_init.sql  002_add_groups.sql  003_add_tags_and_recycle.sql  004_add_proxies.sql  005_add_group_remark_icon.sql  006_add_tag_remark.sql  007_add_extensions.sql  008_add_preferences.sql
src-tauri/src/: _group_commands.txt  _new_commands.txt  lib.rs  main.rs
src-tauri/src/infrastructure/: database.rs  mod.rs
src-tauri/src/modules/: app_updater.rs  auth.rs  batch_result.rs  browser_manager.rs  config.rs  config_writer.rs  extension.rs  fingerprint_merge.rs  group.rs  kernel_downloader.rs  logger.rs  mod.rs  notification.rs  proxy.rs  proxy_bridge.rs  proxy_checker.rs  recycle_bin.rs  settings.rs  tag.rs  window_helper.rs
src-tauri/src/modules/browser/: launcher.rs  mod.rs
src-tauri/src/modules/fingerprint/: examples.rs  generator.rs  integration_tests.rs  mod.rs  seed_manager.rs  (+2 more)
(+238 files in other folders)
